Generate the typescript through a configurator class